analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/lateinitDestructingDeclarationWithoutInitialization.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE
// WITH_STDLIB

fun foo () {
    lateinit var (somet<caret>hing1, something2)
}